kubernetes-istio-setup/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - '*'
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
    - '*'
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: monitoring-gateway
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
